--- a/src/LBF/AdminBundle/Resources/views/Admin/emailConfirmAdmin.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/emailConfirmAdmin.html.twig
@@ -1,11 +1,4 @@
-{# src/LBF/UserBundle/Resources/views/User/emailConfirmation.html.twig #}
-
-{# block subject %}
-{% autoescape false %}
-{{ "emailSummary.titles.general" | trans }}.
-{% endautoescape %}
-{% endblock #}
-
+{# src/LBF/MainBundle/Resources/views/User/emailConfirmAdmin.html.twig #}
 
 {% block body_html %}
 {#
@@ -25,7 +18,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800|Open+Sans+Condensed:300,700,300italic' rel='stylesheet' type='text/css'>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>
-      Le Buffet Francés - {{ 'emailSummary.titles.general' | trans }}
+      Le Buffet Francés - Commande client confirmée
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -38,7 +31,7 @@
             <tr >
               <td align="center" style="padding:10px 0 10px 0; color: #4d5259; font-family:Open Sans, 'Helvetica Neue', Helvetica, sans-serif; font-weight:300; font-size:12px; " >
                 <div style="width:100%; " class="" id="pre-header-text" >
-                  {{ 'emailSummary.notes.topSentence' | trans }} <strong> Le Buffet Francés.</strong>
+                  Cet email provient de <strong>Le Buffet Francés.</strong>
                 </div>
               </td>
             </tr>
@@ -58,17 +51,22 @@
                         <tr >
                           <td style="color: #4d5259; font-family:Open Sans, 'Helvetica Neue', Helvetica, sans-serif; font-weight:800; font-size:16px; " >
                             <div style="width:100%; " class="" id="title_one_half" >
-                              {{ 'emailSummary.titles.thankYouForYourOrder' | trans }}
+                              COMMANDE CONFIRMÉE
                             </div>
                           </td>
                         </tr>
                         <tr >
                           <td style="color: #4d5259; font-family:Open Sans, 'Helvetica Neue', Helvetica, sans-serif; font-weight:300; font-size:12px; " >
                             <div style="width:100%; text-align:justify;">
-                              {{ 'emailSummary.content.summaryEmailRegarding' | trans }} <strong><a href="http://www.lebuffetfrances.com" target="_blank" style="color: #4d5259; text-decoration:none;">Le Buffet Francés</a></strong>. 
-                              <br/>
-                              {{ 'emailSummary.content.orderIs' | trans }} <strong>{{ 'emailSummary.content.onHold' | trans }}</strong>
-                              {{ 'emailSummary.content.shouldReceive' | trans }}
+                                Cet email provient de <strong><a href="www.lebuffetfrances.com" target="_blank" style="color: #4d5259; text-decoration:none;">Le Buffet Francés</a></strong> concernant un récent achat effectué en ligne par 
+                                <strong style="text-decoration:underline;">
+                                  {% if order.user.firstName|length > 0 %}
+                                    {{ order.user.firstName }}
+                                  {% else %}
+                                    {{ order.user.email }}
+                                  {% endif %}
+                                </strong>. 
+                                Vous venez de passer la commande en <strong>confirmée</strong>.
                             </div>
                           </td>
                         </tr>
@@ -84,7 +82,7 @@
                   <tr >
                     <td style="color: #4d5259; font-family:Open Sans, 'Helvetica Neue', Helvetica, sans-serif; font-weight:800; font-size:14px; " >
                       <div style="width:100%; " class="" id="header_text_01" >
-                        {{ 'emailSummary.titles.orderContent' | trans }}
+                        RAPPEL DU CONTENU DE LA COMMANDE 
                       </div>
                     </td>
                   </tr>
@@ -103,36 +101,48 @@
                               <tr >
                                 <td style="padding:0 0 5px 0; color: #4d5259; font-family:Open Sans, 'Helvetica Neue', Helvetica, sans-serif; font-weight:700; font-size:14px; " >
                                   <div style="width:100%; ">
-                                    {{ 'emailSummary.content.thankYouAgain' | trans }}
+                                    Voici le contenu de la commande qui a récemment été passée par
+                                    {% if order.user.gender %}
+                                      {% if order.user.gender == true %}
+                                        M.
+                                      {% else %}
+                                        Mme.
+                                      {% endif %}
+                                    {% endif %}
+                                    {% if order.user.firstName|length > 0 %}
+                                      {{ order.user.firstName }}
+                                    {% else %}
+                                      {{ order.user.email }}
+                                    {% endif %}
                                   </div>
                                 </td>
                               </tr>
                               <tr >
                                 <td style="color: #4d5259; font-family:Open Sans, 'Helvetica Neue', Helvetica, sans-serif; font-weight:300;" >
-                                  {% if newOrder.elements|length > 0 %}
+                                  {% if order.elements|length > 0 %}
                                     <div style="width:100%; text-align:justify;">
                                       <div>
                                         <table border="0" cellpadding="0" cellspacing="0" width="100%" style="font-size:12px;">
                                           <thead>
                                             <tr>
                                               <th>
-                                                {{ 'emailSummary.tableTitles.item' | trans }}
+                                                Elément
                                               </th>
                                               <th style="text-align:center;">
-                                                {{ 'emailSummary.tableTitles.quantity' | trans }}
+                                                Quantité
                                               </th>
                                               <th style="text-align:center;">
-                                                {{ 'emailSummary.tableTitles.weight' | trans }}
+                                                Poids
                                               </th>
                                               <th style="text-align:center;">
-                                                {{ 'emailSummary.tableTitles.price' | trans }}
+                                                Prix
                                               </th>
                                             </tr>
                                           </thead>
                                           <tbody>
                                             {% set total_weight_general = 0 %}
                                             {% set total_price_general = 0 %}
-                                            {% for item_array in newOrder.elements %}
+                                            {% for item_array in order.elements %}
                                               {% set item = item_array['item'] %}
                                               {% set qty = item_array['qty'] %}
                                               <tr>
@@ -170,7 +180,7 @@
                                       <br/>
                                       <div style="width:100%; text-align:center; font-size:15px;">
                                         <strong>
-                                          {{ 'emailSummary.tableTitles.total' | trans }}
+                                          TOTAL: 
                                         </strong>
                                         {% if total_weight_general > 999 %}
                                           {{ (total_weight_general / 1000) | number_format(1, '.', ',') }} kg
@@ -184,33 +194,27 @@
                                       </div>
 
                                       <br/>
-                                      {{ 'emailSummary.content.shouldReceiveShortly' | trans }}
-                                      <br/><br/>
 
-                                      Please note that you asked the order to be ready for the <strong> {{ newOrder.deliveryAt|date("d M Y") }} </strong> at <strong> {{ newOrder.deliveryAt|date("H:i") }} </strong>.
+                                      Le client a reçu validation de la commande et se rendra en magasin récupérer sa commande à <strong> {{ order.deliveryAt|date("H:i") }} </strong> le  <strong> {{ order.deliveryAt|date("d M Y") }} </strong>
 
                                       <br/><br/>
 
                                       <div style="width: 100%; text-align:center;">
-                                        <a href="http://www.lebuffetfrances.com/user#current" style="
+                                        <a href="http://www.lebuffetfrances.com/admin" style="
                                           padding: 6px 10px;
                                           font-size:12px;
                                           text-decoration:none;
                                           background-color: rgba(120,30,20,0.99);
                                           border-radius: 0;
                                           color: white;">
-                                          {{ 'emailSummary.actions.accessProfile' | trans }}
+                                          Accéder à la commande
                                         </a>
                                       </div>
                                   </div>
                                 {% else %}
                                     <div style="width:100%; text-align:justify;">
-                                      {{ 'emailSummary.errors.nothingHere' | trans }}
-                                      <br/>
-                                      {{ 'emailSummary.errors.please' | trans }}
-                                      <a href="mailto:webmaster@lebuffetfrances.com">
-                                        {{ 'emailSummary.errors.contactAdministration' | trans }}
-                                      </a>.
+                                      Cete commande est vide ... <br/>
+                                      <a href="mailto:p.a.destremau@gmail.com">Contactez le webmaster</a> de ce site s'il vous plaît.
                                     </div>
                                 {% endif %}
                                 </td>
@@ -224,81 +228,51 @@
                 </table>
               </td>
             </tr>
-            <tr>
-              <td>
-                <table border="0" cellspacing="0" cellpadding="0" width="600">
-                  <tbody>
-                    <tr>
-                      <td>
-                        <table class="full-width" style="background-color: rgba(100,100,100,0.68); border-top: 2px solid rgba(120,30,20,0.99);" border="0" cellspacing="0" cellpadding="0" width="100%">
-                          <tbody>
-                            <tr>
-                              <td style="padding-top: 20px; padding-right: 0px; padding-bottom: 0px; padding-left: 20px; font-size: 10px; font-family: Open Sans, Arial, Helvetica, sans-serif; font-weight: 400; color: #ffffff;" align="left">
-                                <strong><a href="http://www.lebuffetfrances.com" target="_blank" style="color:rgba(120,30,20,0.99); text-decoration:none; font-size: 12px;">Le Buffet Francés</a></strong> 
-                                {{ 'emailSummary.footer.anecdote' | trans }}
-                              </td>
-                            </tr>
-                            <tr>
-                              <td style="padding-left: 20px; font-size: 10px; font-family: Open Sans, Arial, Helvetica, sans-serif; font-weight: 500; color: #ffffff;" align="left">
-                                <div style="display:inline-block; margin-right : 10px;">
-                                  {{ 'emailSummary.footer.keepInTouch' | trans }}
-                                </div>
-                                <div style="display:inline-block;">
-                                  <a href="https://www.facebook.com/pages/Epicerie-de-Cusco/928893590468462" style="position:relative; top:4px;">
-                                    <img src="{{ asset('img/system/email/fb.png')}}" alt="FB" border="0"  width="16" height="16" style="display:block; font-size:8px; color:white;">
-                                  </a>
-                                </div>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td style="padding-top: 10px; padding-right: 0px; padding-bottom: 0px; padding-left: 20px; font-size: 10px; font-family: Open Sans, Arial, Helvetica, sans-serif; font-weight: 500; color: #ffffff;" align="left">
-                                {{ 'emailSummary.footer.ifWantToJoin' | trans }}
-                                <a style="text-decoration: none; color: rgba(120,30,20,0.99);" href="http://www.lebuffetfrances.com#footerSection" target="_blank">
-                                  {{ 'emailSummary.footer.here' | trans }}
-                                </a>
-                                .
-                              </td>
-                            </tr>
-                            <tr>
-                              <td style="padding-top: 15px; padding-right: 0px; padding-bottom: 15px; padding-left: 20px; font-size: 10px; font-family: Open Sans, Arial, Helvetica, sans-serif; font-weight: 500; color: #ffffff;" align="left">
-                                {{ 'emailSummary.footer.quitSubscription' | trans }}
-                                <a style="text-decoration: none; color: rgba(120,30,20,0.99);" href="http://www.lebuffetfrances.com/newsletterEmailUndo/{{ newOrder.user.email }}" target="_blank">
-                                  {{ 'emailSummary.footer.clickHere' | trans }}
-                                </a>
-                                .
-                              </td>
-                            </tr>
-                            <tr>
-                              <td style="padding-top: 0px; padding-right: 0px; padding-bottom: 0px; padding-left: 20px; font-size: 10px; font-family: Open Sans, Arial, Helvetica, sans-serif; font-weight: 500; color: #ffffff;" align="left">
-                                <strong><a href="http://www.lebuffetfrances.com" target="_blank" style="color:rgba(120,30,20,0.99); text-decoration:none;">Le Buffet Francés</a></strong>
-                              </td>
-
-                            </tr>
-                            <tr>
-                              <td style="padding-top: 0px; padding-right: 0px; padding-bottom: 0px; padding-left: 20px; font-size: 10px; font-family: Open Sans, Arial, Helvetica, sans-serif; font-weight: 500; color: #ffffff;" align="left">
-                                Calle las Sauces
-                              </td>
-                            </tr>
-                            <tr>
-                              <td style="padding-top: 0px; padding-right: 0px; padding-bottom: 0px; padding-left: 20px; font-size: 10px; font-family: Open Sans, Arial, Helvetica, sans-serif; font-weight: 500; color: #ffffff;" align="left">
-                                Larapa, San Sebastian, Cusco - Perú
-                              </td>
-                            </tr>
-                            <tr>
-                              <td style="padding-top: 0px; padding-right: 0px; padding-bottom: 20px; padding-left: 20px;" align="left">
-                                <a style="font-family: Open Sans, Arial, Helvetica, sans-serif; font-weight: 500; font-size: 10px; color: rgba(120,30,20,0.99); text-decoration: none;" href="http://www.lebuffetfrances.com" target="_blank">
-                                  www.lebuffetfrances.com
-                                </a>
-                              </td>
-                            </tr>
-                          </tbody>
+            {% if messageAdminContent|length > 0 %}
+              <tr >
+                <td style="padding:0 15px 0 15px; " bgcolor="#FFFFFF" >
+                  <table style="border-bottom-width:1px; border-bottom-style:solid; border-bottom-color:rgba(100,100,100,0.5); " border="0" cellpadding="0" cellspacing="0" width="100%" >
+                    <tr >
+                      <td style="color: #4d5259; font-family:Open Sans, 'Helvetica Neue', Helvetica, sans-serif; font-weight:800; font-size:14px; " >
+                        <div style="width:100%; " class="" id="header_text_01" >
+                          MESSAGE AJOUTÉ
+                        </div>
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+              <tr >
+                <td bgcolor="#FFFFFF" style="padding:20px 15px 20px 15px; " >
+                  <table border="0" cellpadding="0" cellspacing="0" width="100%" >
+                    <tr >
+                      <td >
+                        <table border="0" cellpadding="0" cellspacing="0" width="100%" >
+                          <tr >
+                            <td width="100%" valign="top" >
+                              <table border="0" cellpadding="0" cellspacing="0" width="100%" >
+                                <tr >
+                                  <td style="padding:0 0 5px 0; color: #4d5259; font-family:Open Sans, 'Helvetica Neue', Helvetica, sans-serif; font-weight:700; font-size:14px; " >
+                                    <div style="width:100%; ">
+                                      Vous ajouté le message suivant :
+                                    </div>
+                                  </td>
+                                </tr>
+                                <tr >
+                                  <td style="color: #4d5259; font-family:Open Sans, 'Helvetica Neue', Helvetica, sans-serif; font-weight:300;" >
+                                    {{ messageAdminContent|raw|nl2br }}
+                                  </td>
+                                </tr>
+                              </table>
+                            </td>
+                          </tr>
                         </table>
                       </td>
                     </tr>
-                  </tbody>
-                </table>
-              </td>
-            </tr>
+                  </table>
+                </td>
+              </tr>
+            {% endif %}
           </table>
         </td>
       </tr>
@@ -311,3 +285,18 @@
 </html>
 
 {% endblock %}
+
+
+{# block body_text %}
+{% autoescape false %}
+
+Hello !
+
+De la part de l'administration:
+
+
+Cordialement,
+La Team de la Grande Boucle Etudiante
+
+{% endautoescape %}
+{% endblock #}
