--- a/src/LBF/AdminBundle/Resources/views/Admin/indexAdmin.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/indexAdmin.html.twig
@@ -9,7 +9,7 @@
 {% block LBF_Admin_body %}
 
 	<!-- BEGIN CONTENT -->
-	<div id="page_content" class="row">
+	<div id="page_content_admin" class="row">
 
 		<div id="sessionFlash" class="sessionFlash">
 		</div>
@@ -33,10 +33,10 @@
 
 					<!--  ///// ///// ///// ///// /////  AUTHORISED  ///// ///// ///// ///// ///// --> 
 		        	{% if is_granted("ROLE_ADMIN") %}
-		        		<div role="tabpanel">
+		        		<div role="tabpanel" id="user_panel_parent">
 
 							  <!-- Nav tabs -->
-							  <div class="col-md-3 col-xs-3 border_white_right">
+							  <div class="col-md-3 col-xs-3 ">  <!-- border_white_right -->
 								  <ul class="nav_tabs_user list_no_style_li" role="tablist">
 								    <li role="user_tabs" class="active">
 								    	<a href="#current" aria-controls="current" role="tab" data-toggle="tab" class="btn btn-choice">
@@ -84,7 +84,7 @@
 							  </div>
 
 						  	<!-- Tab panes -->
-						  	<div class="col-md-9 col-xs-9 tab-content">
+						  	<div class="col-md-9 col-xs-9 tab-content" id="user_panel">
 						  		
 						    	<div role="tabpanel" class="tab-pane nav active" id="current">
 									{% if currentOrders|length > 0 %}
@@ -97,6 +97,9 @@
 					                            </th>
 					                            <th class="left">
 					                              Eléments
+					                            </th>
+					                            <th class="center">
+					                              Client
 					                            </th>
 					                            <th class="center">
 					                              Créé le
@@ -133,10 +136,17 @@
 					                              	{% endif %}
 					                              </td>
 					                              <td class="center">
-					                              	{{ single_order.createdAt|date("H:i d/M/Y") }}
+					                              	{% if single_order.user.firstName|length > 0 and single_order.user.lastName|length > 0 %}
+					                              		{{ single_order.user.firstName }} {{ single_order.user.lastName }}
+					                              	{% else %}
+					                              		{{ single_order.user.email }}
+					                              	{% endif %}
 					                              </td>
 					                              <td class="center">
-					                              	{{ single_order.deliveryAt|date("H:i d/M/Y") }}
+					                              	{{ single_order.createdAt|date("H:i d M Y") }}
+					                              </td>
+					                              <td class="center">
+					                              	{{ single_order.deliveryAt|date("H:i d M Y") }}
 					                              </td>
 					                              <td class="center">
 					                              	{% if single_order.status == 'onHold' %}
@@ -152,17 +162,34 @@
 					                              </td>
 					                              <td class="center">
 					                              	{% if single_order.status == 'confirm' %}
-						                              	<a href="{{ path('lbf_admin_answer_edit', {'orderId':single_order.id}) }}">
+						                              	<a href="javascript:areYouSureComplete('{{ path('lbf_admin_complete', {'orderId':single_order.id}) }}')">
 						                              		<button class="btn btn-admin">
-							                              		<span class="glyphicon glyphicon-check" aria-hidden="true"></span>
+							                              		<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 						                              		</button>
 						                              	</a>
 					                              	{% endif %}
-						                              	<a href="{{ path('lbf_admin_answer_edit', {'orderId':single_order.id}) }}">
+						                              	<a href="{{ path('lbf_admin_answer', {'orderId':single_order.id}) }}">
 						                              		<button class="btn btn-admin">
 							                              		<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 						                              		</button>
 						                              	</a>
+						                              	<a href="javascript:areYouSureDelete('{{ path('lbf_admin_delete', {'orderId':single_order.id}) }}')">
+						                              		<button class="btn btn-admin">
+							                              		<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+						                              		</button>
+						                              	</a>
+						                              	<script type="text/javascript">
+						                              		function areYouSureDelete(path) {
+						                              			if (confirm('Êtes-vous sûr(e) de vouloir supprimer cette commande ?')) {
+						                              				window.location = path;
+						                              			}
+						                              		}
+						                              		function areYouSureComplete(path) {
+						                              			if (confirm('Le client est-il effectivement passer récupérer sa commande ?')) {
+						                              				window.location = path;
+						                              			}
+						                              		}
+						                              	</script>
 					                              </td>
 					                            </tr>
 					                          {% endfor %}
@@ -189,6 +216,9 @@
 					                              Eléments
 					                            </th>
 					                            <th class="center">
+					                            	Client
+					                            </th>
+					                            <th class="center">
 					                              Créé le
 					                            </th>
 					                            <th class="center">
@@ -196,6 +226,9 @@
 					                            </th>
 					                            <th class="center">
 					                              Statut
+					                            </th>
+					                            <th class="center">
+					                              Action
 					                            </th>
 					                          </tr>
 					                        </thead>
@@ -220,13 +253,34 @@
 					                              	{% endif %}
 					                              </td>
 					                              <td class="center">
-					                              	{{ single_order.createdAt }}
+					                              	{% if single_order.user.firstName|length > 0 and single_order.user.lastName|length > 0 %}
+					                              		{{ single_order.user.firstName }} {{ single_order.user.lastName }}
+					                              	{% else %}
+					                              		{{ single_order.user.email }}
+					                              	{% endif %}
+					                              </td>
+					                              <td class="center">
+					                              	{{ single_order.createdAt|date("H:i d/M/Y") }}
 					                              </td>
 					                              <td class="center">
 					                              	{{ single_order.deliveryAt|date("H:i d/M/Y") }}
 					                              </td>
 					                              <td class="center">
 					                              	Livré
+					                              </td>
+					                              <td class="center">
+					                              		<a href="javascript:areYouSureDeleteComplete('{{ path('lbf_admin_delete', {'orderId':single_order.id}) }}')">
+						                              		<button class="btn btn-admin">
+							                              		<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+						                              		</button>
+						                              	</a>
+						                              	<script type="text/javascript">
+						                              		function areYouSureDeleteComplete(path) {
+						                              			if (confirm('Êtes-vous sûr(e) de vouloir supprimer cette commande ?')) {
+						                              				window.location = path;
+						                              			}
+						                              		}
+						                              	</script>
 					                              </td>
 					                            </tr>
 					                          {% endfor %}
@@ -305,9 +359,9 @@
 						    	<div role="tabpanel" class="tab-pane" id="emails">
 						    		<div class="row">
 							    		<div class="float-right">
-							    			<button class="btn btn-log">
+							    			<a href="{{ path('lbf_admin_newsletterEmails') }}" class="btn btn-log">
 							    				Ecire une newsletter
-							    			</button>
+							    			</a>
 							    		</div>
 						    		</div>
 						    		{% if newsletterEmails|length > 0 %}
@@ -361,6 +415,11 @@
 		        	{% endif %}
 
 			</div>
+
+			<script type="text/javascript">
+				var wh = window.innerHeight * 0.8;
+				$('#user_panel').css({'max-height':wh+'px'});
+			</script>
 		</div>
 	</div>
 	<!-- END CONTENT -->
