--- a/src/LBF/MainBundle/Resources/views/Main/order.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/order.html.twig
@@ -32,7 +32,7 @@
 			<div class="section" id="section6">
 				<br/><br/>
 
-	            <div id="breadcrumb" class="center">
+	            <div id="breadcrumb" class="center row80">
 			        <div class="row">
 		              	<h2>
 		                  	{{ 'header.titles.myCart' | trans }}
@@ -41,44 +41,32 @@
 		            <div class="row">
 	                  	<div class="inline_div">
 	                  		<a href="javascript:loadContentCart('{{ path('lbf_main_cart') }}')" class="no_style_a">
-		                    	1. Content
+			                  	1. {{ 'cart.titles.content' | trans }}
 	                  		</a>
 	                  	</div>
 	                  	<div class="inline_div breadcrumb_active">
-	                    	2. Order
+	                    	2. {{ 'cart.titles.order' | trans }}
 	                  	</div>
 	                  	<div class="inline_div">
-	                    	3. Confirm
+	                    	3. {{ 'cart.titles.confirm' | trans }}
 	                  	</div>
 		            </div>
+              		<hr/>
               	</div>
+
 
 				<div id="sectionContentAjax">
 
 					<div id="sessionFlash" class="sessionFlash">
-						{% set fail = app.session.get('fail') %}
-						{% if fail %}
-							<!-- Flash message -->
-							<div class="alert alert-danger alert-dismissible fade in" role="alert">\
-						      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>\
-						      <strong>Careful!</strong> You\'ve reached the maximum availability.\
-						    </div>';
-						    <script type="text/javascript">
-							    setTimeout(function() {
-							    	$('.alert').fadeOut('fast');
-							    	document.getElementById("sessionFlash").style.display = "none";
-							    },4000);
-						    </script>
-						   {% endif %}
 					</div>
 
 			        <div class="row80 left">
-		        		Dear {% if app.user.firstName|length > 0 %}{{ app.user.firstName }}{% else %}{{ app.user.email }}{% endif %}, <br/>
+			        	{{ 'cart.orderContent.dear' | trans }} {% if app.user.firstName|length > 0 %}{{ app.user.firstName }}{% else %}{{ app.user.email }}{% endif %}, <br/>
 		        		{% set cart = app.session.get('cart') %}
 	                	{% if cart|length > 0 %}
 	                		<div class="row">
 					        	<div class="col-md-6">
-					        		You're about to finalize your order of :
+					        		{{ 'cart.orderContent.finalize' | trans }}
 					        		<ul>
 					        			{% set total_price_general = 0 %}
 					        			{% for item_array in cart %}
@@ -92,27 +80,31 @@
 					        		</ul>
 					        	</div>
 					        	<div class="col-md-6">
-				                    of a total of <strong>S/. {{ total_price_general }}</strong>
+					        		<div class="border_white">
+						        		{{ 'cart.orderContent.ofaTotal' | trans }} <strong>S/. {{ total_price_general }}</strong>
+					        		</div>
 					        	</div>
 	                		</div>
 	                		<br/>
 		                    <div class="row">
-				        		Please be aware that this a pre-order that :
+		                    	{{ 'cart.orderContent.requisites' | trans }} 
 				        		<ol>
 				        			<li>
-				        				The managers have to validate it for your order to get confirmed.
+				        				{{ 'cart.orderContent.conditions1' | trans }}
 				        			</li>
 				        			<li>
-				        				Once the order is confirmed and ready, you will have to come and collect your order at the following address: 
+				        				{{ 'cart.orderContent.conditions2' | trans }}
 				        				<br/><br/>
 				        				<div class="address_box">
-					        				<strong>
-					        					<strong>Le Buffet Francés</strong> <br/>
+				        					<span style="font-size:1.2em;">
+					        					<strong>Le Buffet Francés</strong> 
+				        					</span>
+				        					<br/>
+				        					<span style="font-size:0.9em;">
 						        				Avenida Las Sauces <br/>
-						        				Larapa <br/>
-					        					San Sebastian - Cusco <br/>
+						        				Larapa - San Sebastian - Cusco <br/>
 					        					Perú
-					        				</strong>
+				        					</span>
 				        				</div>
 				        			</li>
 				        		</ol>
@@ -132,10 +124,11 @@
 				                    <br/>
 				                  {% endif %}
 								<div class="choose_date_order">
-									<div class="inline_div">
-						        		The minimum delay is 2 hours, but you can choose a date that best suits you : 
+									<div class="left">
+										{{ 'cart.orderContent.shopOpen' | trans }}
+										{{ 'cart.orderContent.minimumOpen' | trans }}
 									</div>
-									<div class="form-group inline_div">
+									<div class="form-group center">
 								        {% if form_errors(formNewOrder.deliveryAt) %}
 						                    <div class="error_message">
 						                      	<span class="warning_word">
@@ -165,11 +158,12 @@
 
 									<div class="row80">
 					                	<a href="javascript:loadContentCart('{{ path('lbf_main_cart') }}')" class="no_style_a btn btn-modal float-left">
-								            Previous
+					                		<img src="{{ asset('img/system/defaults/left_arrow.png') }}" alt="" class="btn_right_arrow"/>
+					                		{{ 'cart.actions.previous' | trans }}
 								        </a>
 								        <button type="submit" class="btn btn-modal float-right">
-								            <img src="{{ asset('img/system/defaults/right_arrow.png') }}" alt="" class="btn_right_arrow"/>
 								            {{ 'ourProducts.actions.order' | trans }}
+								            <img src="{{ asset('img/system/defaults/right_arrow.png') }}" alt="" class="btn_right_arrow"/>
 								        </button>
 					                </div>
 								</div>
